<resources>
    <string name="app_name">Nadol</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO NEWS button below to subscribe to the
        news topic. Messages sent to the news topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_news">Subscribe To News</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="action_settings">Settings</string>
    <string name="mobileno">Please Enter 10-Digit Mobile No.</string>
    <string name="newsimage">News Image</string>
    <string name="maintitle">RJ</string>
    <string name="gridimage">Grid Image</string>
    <string name="newspush">News Notification</string>
    <string name="cricketpush">Cricket Notification</string>
    <string name="manifestnews">News</string>
    <string name="feedback">Please give genuine feedback or review.\n\nThis will be helpful for further development.</string>
    <string name="submitfeedback">Submit</string>

    <string name="live">Live Score!</string>
    <string name="matchno">Match No. -</string>
    <string name="no">N/A</string>
    <string name="teama">Team A</string>
    <string name="teamb">Team B</string>
    <string name="runs">0</string>
    <string name="slash">/</string>
    <string name="wickets">0</string>
    <string name="vs">VS</string>
    <string name="over">Overs -</string>
    <string name="overno">0.0</string>
    <string name="tget">Target -</string>
    <string name="target">N/A</string>
    <string name="status">Status:</string>
    <string name="result">No Result</string>
    <string name="teamalogo">Team A Logo</string>
    <string name="teamblogo">Team B Logo</string>

    <string name="fixtures">Fixtures</string>
    <string name="results">Results</string>
    <string name="mom">Man of the Match</string>
    <string name="deve">Developed By</string>
    <string name="rj">Rishabh Deepak </string>
    <string name="rj1">Bhikamchandji Pawesha</string>
    <string name="sponsors">Sponsors</string>
    <string name="settings">Settings</string>
    <string name="feedbacks">Feedback</string>
    <string name="npl">NPL</string>
    <string name="livescore">Live Score</string>
    <string name="teams">Teams</string>

    <string name="empty">No Updates: Please Swipe down to refresh</string>
    <string name="empty1">Note:Please Swipe down to get livescore</string>
</resources>
