<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp">

    <EditText
        android:id="@+id/feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="20"
        android:inputType="textMultiLine"
        android:ems="10"
        android:hint="@string/feedback"
        android:gravity="top|start"
        android:scrollbars="vertical"
        />

    <Button
        android:id="@+id/submitfeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitfeedback"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/deve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="160dp"
        android:text="@string/deve"
        android:textSize="16sp"

        android:layout_gravity="center"

        />
    <TextView
        android:id="@+id/rj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rj"
        android:textSize="19sp"
        android:textColor="#000000"
        android:textStyle="bold"

        />
    <TextView
        android:id="@+id/rj1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/rj1"
        android:textSize="19sp"
        android:textColor="#000000"
        android:textStyle="bold"

        />

</LinearLayout>