<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    >

    <TextView
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/live"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:id="@+id/livescore"
        />

    <TextView
        android:id="@+id/scoreid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:paddingStart="6dp"
        android:textSize="24sp"
        android:text="@string/matchno" android:textColor="#000000"
        tools:ignore="NewApi" />

    <TextView
        android:id="@+id/matchno"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_toRightOf="@+id/match"
        android:layout_toEndOf="@+id/match"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingStart="6dp"
        android:paddingTop="6dp"
        android:text="@string/no"
        android:textSize="24sp"
        tools:ignore="NewApi"/>




    <TextView
        android:id="@+id/teama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/match"
        android:textColor="#000000"
        android:layout_marginTop="7dp"

        android:paddingLeft="6dp"
        android:paddingStart="6dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="6dp"
        android:text="@string/teama"
        android:textSize="24sp"
        tools:ignore="NewApi"/>



    <TextView
        android:id="@+id/runs"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/match"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@+id/teama"
        android:layout_toEndOf="@+id/teama"
        android:paddingLeft="6dp"
        android:paddingStart="6dp"
        android:paddingRight="3dp"
        android:paddingEnd="3dp"
        android:paddingTop="6dp"
        android:text="@string/runs"
        android:textSize="24sp"
        tools:ignore="NewApi"/>
    <TextView
        android:id="@+id/slash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/match"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@id/runs"
        android:layout_toEndOf="@+id/runs"
        android:textColor="#000000"
        android:paddingTop="6dp"
        android:text="@string/slash"
        android:textSize="24sp"/>



    <TextView
        android:id="@+id/wicketno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/match"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@+id/slash"
        android:layout_toEndOf="@+id/slash"
        android:paddingRight="6dp"
        android:paddingEnd="6dp"
        android:paddingStart="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="6dp"
        android:text="@string/wickets"
        android:textColor="#000000"
        android:textSize="24sp"
        tools:ignore="NewApi" />



    <ImageView
        android:id="@+id/teamalogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/teama"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:contentDescription="@string/teamalogo"
        />

    <TextView
        android:id="@+id/vss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/teamalogo"
        android:layout_toRightOf="@+id/teamalogo"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/slash"
        android:text="@string/vs"
        android:textSize="22sp"
        android:textColor="#000000"
        />

    <ImageView
        android:id="@+id/teamblogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/teama"
        android:layout_toEndOf="@+id/vss"
        android:layout_toRightOf="@+id/vss"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/teamblogo"/>



    <TextView
        android:id="@+id/teamb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vss"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/teamb"
        android:textSize="24sp"
        android:textColor="#000000"
        />
    <TextView
        android:id="@+id/over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/teamb"

        android:layout_marginTop="3dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/over"
        android:textSize="24sp"
        android:textColor="#000000"/>


    <TextView
        android:id="@+id/overno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamb"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@id/over"
        android:paddingLeft="6dp"
        android:layout_toEndOf="@+id/over"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/overno"
        android:textColor="#000000"
        android:textSize="24sp"/>



    <TextView
        android:id="@+id/tget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/over"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="12dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/tget"
        android:textSize="24sp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/overno"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/tget"
        android:layout_toEndOf="@+id/tget"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/target"
        android:textSize="24sp"
        android:textColor="#ff0e8510"/>
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/status"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:layout_below="@+id/tget"
        android:textColor="#000000"
        />





    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/target"
        android:layout_toRightOf="@+id/status"
        android:layout_toEndOf="@+id/status"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp"
        android:text="@string/result"
        android:textSize="24sp"
        android:textStyle="italic"
        android:textColor="#ff0000"/>
</RelativeLayout>